# toolrate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 08bd01337993_initial_schema.py  a1b2c3d4e5f6_partition_execution_reports.py  b2c3d4e5f6a7_add_webhooks_table.py  c3d4e5f6a7b8_add_stripe_fields_to_api_keys.py  c5ff7924f07d_add_journey_tracking_fields.py  d4e5f6a7b8c9_add_audit_logs_table.py  e5f6a7b8c9da_add_jurisdiction_columns.py  f6a7b8c9dbec_add_jurisdiction_metadata.py  g7b8c9d0ecfd_add_payg_billing_period.py  h8c9d0e1fdaa_add_llm_mitigations_and_alt_reason.py  i9d0e1f2abbc_add_pricing_and_history.py  j0e1f2a3bcd_index_alternatives.py  k1f2a3b4cde_webhook_notification_email.py  l2g3h4i5jkl_payg_meter_outbox.py  m3h4i5j6klm_unique_session_attempt.py  n4i5j6k7lmn_consolidate_other_category.py  o5j6k7l8mno_normalize_webhook_identifiers.py  p6k7l8m9nop_add_source_to_api_keys.py
app/: backfill_jurisdictions.py  cli.py  config.py  dashboard_page.py  demo_page.py  dependencies.py  import_assessments.py  import_pricing.py  landing.py  llms.py  main.py  me_page.py  pricing_page.py  privacy_page.py  seed.py  site_header.py
app/core/: categories.py  error_categories.py  exceptions.py  identifiers.py  security.py  url_safety.py
app/data/: jurisdiction_seed.py
app/db/: session.py
app/models/: __init__.py  alternative.py  api_key.py  audit_log.py  payg_meter_event.py  report.py  score_cache.py  tool.py  tool_pricing_history.py  webhook.py
app/schemas/: assess.py  report.py
app/services/: audit.py  (+10 more)
examples/: crewai_agent.py  langchain_agent.py  vercel_ai_sdk.ts
llms/: llms-full.txt  llms.txt  toolrate-am.md  toolrate-ar.md  toolrate-bn.md  toolrate-cs.md  toolrate-da.md  toolrate-de.md  toolrate-el.md  toolrate-en.md  toolrate-es.md  toolrate-fa.md  toolrate-fi.md  toolrate-fr.md  toolrate-ha.md  toolrate-he.md  toolrate-hi.md  toolrate-hu.md  toolrate-id.md  toolrate-it.md  toolrate-ja.md  toolrate-ko.md  toolrate-mr.md  toolrate-ms.md  toolrate-nl.md  toolrate-no.md  toolrate-pl.md  toolrate-pt-br.md  toolrate-ro.md  toolrate-ru.md  toolrate-sv.md  toolrate-sw.md  toolrate-ta.md  toolrate-te.md  toolrate-th.md  toolrate-tl.md  toolrate-tr.md  toolrate-uk.md  toolrate-ur.md  toolrate-vi.md  (+3 more)
loadtest/: locustfile.py
mcp_server/: server.py
prompts/: llm_tool_assessment.md
scripts/: backup-db.sh  discover-apis.py  healthcheck.sh  manage-partitions.py  run-discovery.sh
sdks/python/: README.md  pyproject.toml
sdks/python-nemoflow-shim/: README.md  pyproject.toml
sdks/python-nemoflow-shim/nemoflow/: __init__.py
sdks/python/examples/: llm_router.py
sdks/python/nemoflow/: __init__.py  client.py  guard.py
sdks/python/toolrate/: __init__.py  client.py  guard.py
tests/: conftest.py  test_account_delete.py  test_admin_dashboard.py  test_assess_schema.py  test_auth_register.py  test_billing_webhook.py  test_categories_consolidation.py  test_cost_scoring.py  test_discovery.py  test_guard_auto.py  test_identifier_normalization.py  test_identifier_normalization_webhooks.py  test_jurisdiction.py  test_me_dashboard.py  test_payg_outbox.py  test_pricing_and_sales.py  test_python_sdk_errors.py  test_rate_limiter.py  test_report_schema.py  test_scoring.py  test_security.py  test_validation_error_handler.py  test_webhook_dispatch.py
(+33 files in other folders)
