[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemoflow"
version = "0.3.2"
description = "Deprecated — the 'nemoflow' package has been renamed to 'toolrate'. This package is a thin compatibility shim that re-exports everything from 'toolrate' and emits a DeprecationWarning on import."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "ToolRate", email = "bleep@toolrate.ai"},
]
keywords = ["ai", "agents", "reliability", "tools", "llm", "api", "deprecated"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "toolrate>=0.3.2",
]

[project.urls]
Homepage = "https://toolrate.ai"
Documentation = "https://api.toolrate.ai/docs"
Repository = "https://github.com/netvistamedia/toolrate"
