[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemoflow"
version = "0.1.0"
description = "Python SDK for the NemoFlow API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://nemoflow.ai"
Documentation = "https://docs.nemoflow.ai"
