[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolrate"
version = "0.3.4"
description = "Reliability oracle for AI agents — pick the right tool from the start"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "ToolRate", email = "bleep@toolrate.ai"},
]
keywords = ["ai", "agents", "reliability", "tools", "llm", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://toolrate.ai"
Documentation = "https://api.toolrate.ai/docs"
Repository = "https://github.com/netvistamedia/toolrate"
